# Dash-Panel-V2-25

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Dash-Panel-V2.ioc  Dash-Panel-V2.launch  README.md  Riverdi_50STM32U5A9.ioc  STM32U5a9xx_FLASH.ld  STM32U5a9xx_RAM.ld  dashPanel25.map  executeCSV.sh  riverdi-50-stm32u5-lvgl.ioc  touchgfx
Application/Inc/: CANdler.h  buttons.h  dash.h  gui.h  msgIDs.h  pinging.h  utils.h
Application/Src/: CANdler.c  buttons.c  dash.c  gui.c  pinging.c  utils.c
Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
Core/Src/: adc.c  app_freertos.c  fdcan.c  gpio.c  hash.c  lvgl_port_display.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
Debug/: Dash-Panel-V2.elf  Dash-Panel-V2.list  Dash-Panel-V2.map  makefile  objects.list
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32u5xx_hal_msp.cyclo  stm32u5xx_hal_msp.d  stm32u5xx_hal_msp.su  stm32u5xx_it.cyclo  stm32u5xx_it.d  stm32u5xx_it.su  subdir.mk  system_stm32u5xx.d
Debug/Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal.d  stm32u5xx_hal_adc.d  stm32u5xx_hal_adc_ex.d  stm32u5xx_hal_cordic.cyclo  stm32u5xx_hal_cordic.d  stm32u5xx_hal_cordic.su  stm32u5xx_hal_cortex.d  stm32u5xx_hal_crc.d  stm32u5xx_hal_crc_ex.d  stm32u5xx_hal_dac.d  stm32u5xx_hal_dac_ex.d  stm32u5xx_hal_dcache.d  stm32u5xx_hal_dma.d  stm32u5xx_hal_dma2d.d  stm32u5xx_hal_dma_ex.d  stm32u5xx_hal_dsi.d  stm32u5xx_hal_exti.d  stm32u5xx_hal_fdcan.d  stm32u5xx_hal_flash.d  stm32u5xx_hal_flash_ex.d  stm32u5xx_hal_gpio.d  stm32u5xx_hal_gpu2d.d  stm32u5xx_hal_gtzc.cyclo  stm32u5xx_hal_gtzc.d  stm32u5xx_hal_hash.cyclo  stm32u5xx_hal_hash.d  stm32u5xx_hal_hash.su  stm32u5xx_hal_hash_ex.d  stm32u5xx_hal_i2c.d  stm32u5xx_hal_i2c_ex.d  stm32u5xx_hal_icache.d  stm32u5xx_hal_lptim.d  stm32u5xx_hal_ltdc.d  stm32u5xx_hal_ltdc_ex.d  stm32u5xx_hal_mdf.d  stm32u5xx_hal_mmc.d  stm32u5xx_hal_mmc_ex.d  stm32u5xx_hal_ospi.d  stm32u5xx_hal_pwr.d  stm32u5xx_hal_pwr_ex.d  (+18 more)
STM32CubeIDE/: .project
TouchGFX/: ApplicationTemplate.touchgfx.part  DashPanel.touchgfx  application.config
TouchGFX/assets/texts/: texts.xml
TouchGFX/config/gcc/: app.mk
TouchGFX/config/msvs/: Application.props
TouchGFX/simulator/msvs/: Application.vcxproj.filters
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
